<resources>
    <string name="app_name">Open Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="low_tem">Low: %1$d°</string>
    <string name="high_tem">High: %1$d°</string>
    <string name="humidity_tem">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="button">Forecast</string>
    <string name="title_activity_forecast">forecast</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>