<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_paul_mn"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        android:textColor="@color/black"
        android:text="@string/temperature"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun"/>

    <TextView
        android:id="@+id/feel_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        android:text="@string/feels_like"/>

    <TextView
        android:id="@+id/low_tem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/feel_like"
        android:text="@string/low_tem" />

    <TextView
        android:id="@+id/High_tem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_tem"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/low_tem"
        app:layout_constraintTop_toBottomOf="@id/low_tem" />

    <TextView
        android:id="@+id/Humidity_tem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/humidity_tem"
        app:layout_constraintStart_toStartOf="@id/High_tem"
        app:layout_constraintTop_toBottomOf="@id/High_tem" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@id/Humidity_tem"
        app:layout_constraintTop_toBottomOf="@id/Humidity_tem"/>

</androidx.constraintlayout.widget.ConstraintLayout>